--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,6 @@
         "hassankhan/config": "0.8.*",
         "illuminate/database": "~5.0",
         "alexgarrett/violin": "2.*",
-        "ircmaxell/random-lib": "~1.1"
+        "ircmaxell/random-lib": "~1.1",
+        "tijsverkoyen/css-to-inline-styles": "1.5.5"
     }}
