Adds Intervention/image library and integrates it in local upload provider

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,6 @@
         "alexgarrett/violin": "2.*",
         "ircmaxell/random-lib": "~1.1",
         "tijsverkoyen/css-to-inline-styles": "1.5.5",
-        "aws/aws-sdk-php": "^3.19"
+        "aws/aws-sdk-php": "^3.19",
+        "intervention/image": "^2.3"
     }}
