--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /app/config/development.php
 # Created by .ignore support plugin (hsz.mobi)
 /composer.lock
+/public/assets/editor/
+/public/assets/lightgallery/
+/public/assets/components/
