--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,6 @@
         "tijsverkoyen/css-to-inline-styles": "1.5.5",
         "aws/aws-sdk-php": "^3.19",
         "intervention/image": "^2.3",
-        "symfony/http-foundation": "^3.1"
+        "symfony/http-foundation": "^3.1",
+        "robmorgan/phinx": "^0.6.4"
     }}
