--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "jquery": "^3.1.0",
     "bootstrap": "^3.3.7",
-    "lightgallery": "^1.2.21"
+    "lightgallery": "^1.2.21",
+    "ckeditor": "^4.5.10"
   }
 }
